--- a/redazionali.html
+++ b/redazionali.html
@@ -7,9 +7,9 @@
   <title>Redazionali</title>
   <meta name="viewport" content="width=380"/>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?3837790900"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-mastro.css?358756413"/>
-  <link rel="stylesheet" type="text/css" href="css/redazionali.css?3946026768" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/site_global.css?4036735006"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-mastro.css?74496446"/>
+  <link rel="stylesheet" type="text/css" href="css/redazionali.css?127437556" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -17,34 +17,41 @@
    </head>
  <body>
 
-  <div class="clearfix" id="page"><!-- column -->
+  <div class="gradient clearfix" id="page"><!-- column -->
    <div class="position_content" id="page_position_content">
-    <div class="colelem" id="u213"><!-- image -->
-     <img class="block" id="u213_img" src="images/senza_titolo-1.png" alt="" width="291" height="72"/>
+    <div class="gradient clearfix browser_width colelem" id="u704"><!-- group -->
+     <div class="grpelem" id="u213"><!-- image -->
+      <img class="block" id="u213_img" src="images/senza_titolo-1.png" alt="" width="291" height="72"/>
+     </div>
     </div>
     <div class="colelem" id="u337"><!-- custom html -->
-     <iframe src="http://www.radiofn.eu/wordpress/?cat=81" scrolling="yes" frameborder="1"
-                align="left" height="400px" width="300" seamless="seamless" >
+     <iframe src="http://www.radiofn.eu/wordpress/?cat=81" scrolling="yes" frameborder="0"
+                align="left" height="400px" width="300" seamless="seamless" overflow="true">
                 </iframe>
 </div>
     <div class="verticalspacer"></div>
-    <ul class="MenuBar clearfix browser_width colelem" id="menuu560"><!-- row -->
-     <li class="MenuItemContainer clearfix grpelem" id="u589"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u590" href="index.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u593" alt="Player" src="images/blank.gif"/><!-- state-based BG images --></a>
+    <ul class="MenuBar clearfix browser_width colelem" id="menuu668"><!-- row -->
+     <li class="MenuItemContainer clearfix grpelem" id="u697"><!-- vertical box -->
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu gradient clearfix colelem" id="u700" href="index.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u701" alt="Player" src="images/blank.gif"/><!-- state-based BG images --></a>
      </li>
-     <li class="MenuItemContainer clearfix grpelem" id="u561"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u564" href="notizie.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u567" alt="Notizie" src="images/blank.gif"/><!-- state-based BG images --></a>
+     <li class="MenuItemContainer clearfix grpelem" id="u669"><!-- vertical box -->
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu gradient clearfix colelem" id="u672" href="notizie.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u675" alt="Notizie" src="images/blank.gif"/><!-- state-based BG images --></a>
      </li>
-     <li class="MenuItemContainer clearfix grpelem" id="u582"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u585" href="facebook.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u588" alt="Facebook" src="images/blank.gif"/><!-- state-based BG images --></a>
+     <li class="MenuItemContainer clearfix grpelem" id="u676"><!-- vertical box -->
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu gradient clearfix colelem" id="u677" href="facebook.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u679" alt="Facebook" src="images/blank.gif"/><!-- state-based BG images --></a>
      </li>
     </ul>
    </div>
   </div>
   <div class="preload_images">
-   <img class="preload" src="images/u593-a.png" alt=""/>
-   <img class="preload" src="images/u567-a.png" alt=""/>
-   <img class="preload" src="images/u588-a.png" alt=""/>
+   <img class="preload" src="images/u701-a.png" alt=""/>
+   <img class="preload" src="images/u675-a.png" alt=""/>
+   <img class="preload" src="images/u679-a.png" alt=""/>
+   <!--[if lt IE 9]>
+   <img class="preload" src="images/u700-r-grad.png" alt=""/>
+   <img class="preload" src="images/u700-m-grad.png" alt=""/>
+   <img class="preload" src="images/u700-a-grad.png" alt=""/>
+   <![endif]-->
   </div>
   <!-- JS includes -->
   <script type="text/javascript">
@@ -54,8 +61,8 @@
    window.jQuery || document.write('\x3Cscript src="scripts/jquery-1.8.3.min.js" type="text/javascript">\x3C/script>');
 </script>
   <script src="scripts/museutils.js?3992981318" type="text/javascript"></script>
-  <script src="scripts/jquery.musemenu.js?3788803530" type="text/javascript"></script>
   <script src="scripts/jquery.tobrowserwidth.js?317228635" type="text/javascript"></script>
+  <script src="scripts/jquery.musemenu.js?3788803530" type="text/javascript"></script>
   <script src="scripts/jquery.watch.js?4068933136" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
