--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
      <p>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <iframe src="http://radiofn.altervista.org/fd.html" scrolling="no" height="200"
-                width="230" frameborder="0" seamless="seamless">
+                width="230" frameborder="0" >
                 </iframe>
             </p>
 
