--- a/index.html
+++ b/index.html
@@ -27,24 +27,19 @@
     <div class="colelem" id="u219"><!-- custom html -->
      <p>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <div align="center" id="radioforge1" style="background:url() no-repeat; width:400px; height:200px;">
-<script type="text/javascript" src="http://hosted.musesradioplayer.com/mrp.js"></script><script type="text/javascript">MRP.insert({
+<script type="text/javascript">
+MRP.insert({
 'url':'http://s1.myradiostream.com:17070/;',
-'lang':'it',
 'codec':'mp3',
 'volume':100,
-'introurl':'',
-'fallback':'',
 'autoplay':true,
-'jsevents':false,
-'buffering':3,
-'title':'-RadioFN - ',
-'welcome':'Benvenuti in RadioFN',
-'bgcolor':'#FFFFFF',
+'buffering':5,
+'title':'RadioFN',
 'wmode':'transparent',
-'skin':'kplayer',
-'width':400,
-'height':200});
+'skin':'simple-red',
+'width':300,
+'height':122
+});
 </script>
 </div>
             </p>
