--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     <div class="colelem" id="u219"><!-- custom html -->
      <p>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <script type="text/javascript" src="http://hosted.musesradioplayer.com/mrp.js"></script>
+
 <script type="text/javascript">
 MRP.insert({
 'url':'http://s1.myradiostream.com:17070/;',
